--- a/Home.html
+++ b/Home.html
@@ -44,6 +44,7 @@
                         <li><a href="Events.html">Events</a></li>
                         <li><a href="TVChannels.html">TV</a></li>
                         <li><a href="PrayerRequest.html">Prayer Request</a></li>
+                        <li><a href="Discussions.html">Discussiions</a></li>
                         <li>
                             <a href="Chat.html">Chat</a>
                             <span class="red-dot" id="new-message-dot"></span>
