--- a/Home.html
+++ b/Home.html
@@ -36,11 +36,10 @@
             <div class="header-right">
                 <nav>
                     <ul class="nav-links">
-                        <li><a href="Shop.html">Shop</a></li>
+                        <li><a href="Shop.htm">Shop</a></li>
                         <li><a href="Word_of_the_day.html">Scripture</a></li>
                         <li><a href="Donations.html">Donation</a></li>
                         <li><a href="podcast.html">Podcast</a></li>
-                        <li><a href="Member_profile.html">Membership</a></li>
                         <li><a href="Events.html">Events</a></li>
                         <li><a href="TVChannels.html">TV</a></li>
                         <li><a href="PrayerRequest.html">Prayer Request</a></li>
