Discussions editing for audio

--- a/Discussions.html
+++ b/Discussions.html
@@ -25,6 +25,7 @@
     <input type="text" id="discussion-username" placeholder="Enter your username" />
     <input type="text" id="discussion-title" placeholder="Discussion Title" />
     <textarea id="discussion-content" placeholder="Discussion Content"></textarea>
+    <input type="file" id="discussion-audio" accept="audio/*" />
     <button onclick="submitDiscussion()">Submit Discussion</button>
 </div>
 
