Sign up drop down for role

--- a/Signup.html
+++ b/Signup.html
@@ -34,6 +34,40 @@
                 <label for="branch">Branch Location:</label>
                 <input type="text" id="branch" name="branch_name" required>
             </div>
+            <div class="form-group">
+                <label for="role">Select Your Role:</label>
+                <select id="role" name="role" required>
+                    <option value="">Select your role</option>
+                    <option value="Pastor">Pastor</option>
+                    <option value="Bishop">Bishop</option>
+                    <option value="Member">Member</option>
+                    <option value="Elder">Elder</option>
+                    <option value="Deacon">Deacon</option>
+                    <option value="Ministry Leader">Ministry Leader</option>
+                    <option value="Volunteer">Volunteer</option>
+                    <option value="Youth Leader">Youth Leader</option>
+                    <option value="Worship Leader">Worship Leader</option>
+                    <option value="Administrative Staff">Administrative Staff</option>
+                    <option value="New Visitor">New Visitor</option>
+                    <option value="Church Staff">Church Staff</option>
+                    <option value="Missionary">Missionary</option>
+                    <option value="Sunday School Teacher">Sunday School Teacher</option>
+                    <option value="Small Group Leader">Small Group Leader</option>
+                    <option value="Community Group Leader">Community Group Leader</option>
+                    <option value="Outreach Coordinator">Outreach Coordinator</option>
+                    <option value="Prayer Team Member">Prayer Team Member</option>
+                    <option value="Event Coordinator">Event Coordinator</option>
+                    <option value="Media/Tech Team">Media/Tech Team</option>
+                    <option value="Finance Committee Member">Finance Committee Member</option>
+                    <option value="Counselor/Spiritual Advisor">Counselor/Spiritual Advisor</option>
+                    <option value="Children’s Ministry Leader">Children’s Ministry Leader</option>
+                    <option value="Women's Ministry Leader">Women's Ministry Leader</option>
+                    <option value="Men's Ministry Leader">Men's Ministry Leader</option>
+                    <option value="Mission Trip Coordinator">Mission Trip Coordinator</option>
+                    <option value="Hospitality Team Member">Hospitality Team Member</option>
+                    <option value="Facilities Manager">Facilities Manager</option>
+                </select>
+            </div>
             <button type="submit">Sign Up</button>
         </form>
         <a href="/Login.html">Already have an account? Login here.</a>
