--- a/PrayerRequest.html
+++ b/PrayerRequest.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2>Submit a Prayer Request</h2>
+        <h2>Submit Your Request</h2>
         <form id="prayerRequestForm">
             <div class="form-group">
                 <label for="pastorSelect">Select a Pastor</label>
