--- a/Home.html
+++ b/Home.html
@@ -49,7 +49,7 @@
                         <li><a href="podcast.html">Podcast</a></li>
                         <li><a href="Events.html">Events</a></li>
                         <li><a href="TVChannels.html">TV</a></li>
-                        <li><a href="PrayerRequest.html">Prayer Request</a></li>
+                        <li><a href="PrayerRequest.html">Talk to a Pastor</a></li>
                         <li><a href="Discussions.html">Discussiions</a></li>
                         <li>
                             <a href="Chat.html">Chat</a>
@@ -82,7 +82,7 @@
             <!-- Slideshow -->
             <h2>Partners:</h2>
             <h1>Partners</h1>
-            <div class="slideshow-container">
+            <div class="slideshow-container" style="opacity: 0.8;">
                 <div class="slide fade">
                     <img src="slideVP.svg" alt="Slide 1">
                 </div>
