--- a/Home.html
+++ b/Home.html
@@ -43,7 +43,7 @@
             <div class="header-right">
                 <nav>
                     <ul class="nav-links">
-                        <li><a href="Shop.htm">Shop</a></li>
+                        <li><a href="Shop.html">Shop</a></li>
                         <li><a href="Word_of_the_day.html">Scripture</a></li>
                         <li><a href="Donations.html">Donation</a></li>
                         <li><a href="podcast.html">Podcast</a></li>
