--- a/PrayerRequest.html
+++ b/PrayerRequest.html
@@ -24,6 +24,14 @@
             <button type="submit" class="btn btn-primary">Submit Request</button>
         </form>
         <div id="successMessage" class="alert alert-success mt-3" style="display:none;"></div>
+
+        <h3 class="mt-5">Conversations with Pastors</h3>
+        <ul id="pastorList" class="list-group mt-3"></ul>
+
+        <div id="conversation" class="mt-3" style="display:none;">
+            <h4 id="pastorName"></h4>
+            <ul id="requestList" class="list-group"></ul>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
