ChurchTok and cssfor other tabs

--- a/Home.html
+++ b/Home.html
@@ -51,6 +51,7 @@
                         <li><a href="TVChannels.html">TV</a></li>
                         <li><a href="PrayerRequest.html">Talk to a Pastor</a></li>
                         <li><a href="Discussions.html">Discussiions</a></li>
+                        <li><a href="ChurchTok.html">ChurchTok</a></li>
                         <li>
                             <a href="Chat.html">Chat</a>
                             <span class="red-dot" id="new-message-dot"></span>
