--- a/Home.html
+++ b/Home.html
@@ -43,12 +43,11 @@
             <div class="header-right">
                 <nav>
                     <ul class="nav-links">
-                        <li><a href="Shop.html">Shop</a></li>
                         <li><a href="Word_of_the_day.html">Scripture</a></li>
                         <li><a href="Donations.html">Donation</a></li>
                         <li><a href="podcast.html">Podcast</a></li>
                         <li><a href="Events.html">Events</a></li>
-                        <li><a href="TVChannels.html">TV</a></li>
+                        <li><a href="TVChannels.html">Watch Now</a></li>
                         <li><a href="PrayerRequest.html">Talk to a Pastor</a></li>
                         <li><a href="Discussions.html">Discussiions</a></li>
                         <li><a href="ChurchTok.html">ChurchTok</a></li>
