--- a/Donations.html
+++ b/Donations.html
@@ -243,12 +243,14 @@
         <h2>Leave a Review</h2>
         <form id="reviewForm">
             <input type="text" id="reviewerName" placeholder="Your Name" required>
+            <p>Please select a rating level</p>
+
             <div class="star-rating">
-                <span class="star" data-value="1">★</span>
-                <span class="star" data-value="2">★</span>
-                <span class="star" data-value="3">★</span>
-                <span class="star" data-value="4">★</span>
-                <span class="star" data-value="5">★</span>
+                <span class="star" data-value="1">1<br>★</span>
+                <span class="star" data-value="2">2<br>★</span>
+                <span class="star" data-value="3">3<br>★</span>
+                <span class="star" data-value="4">4<br>★</span>
+                <span class="star" data-value="5">5<br>★</span>
                 <input type="hidden" id="ratingValue" value="0">
             </div>
             <textarea id="reviewText" placeholder="Write your review..." required></textarea>
